# penguin

./: .gitignore  Cargo.toml  Readme.md  allow-penguin-hup-proxy  devserver.sh  install.sh  penguin.conf  penguin.installed.toml  penguin.service  prepvm.sh
.github/workflows/: ci.yml
client/: README.md  index.html  jest.config.ts  package-lock.json  package.json
client/src/: App.css  App.tsx  Client.tsx  Clients.tsx  Domains.tsx  ViewClient.tsx  ViewDomains.tsx  api.ts  bindings  bindings.test.ts  commonstyles.tsx  events.ts  index.css  main.tsx  result.test.ts  result.ts
client/src/components/: CustomBreadcrumb.tsx  ErrorMessage.tsx  FieldEditor.tsx  GoogleAuth.tsx  InputWithButton.tsx  SimpleSelect.tsx  Table.tsx
server/: .gitignore  Cargo.toml  allow-penguin-hup-proxy  install.sh  penguin.conf  penguin.installed.toml  penguin.nginx.conf  penguin.service  penguin.toml  prepvm.sh  updatecert.sh
server/bindings/: Client.ts  DomainList.ts  Lease.ts  LogEntry.ts  NetAccess.ts  Rule.ts  ServiceStatus.ts
server/src/: api.rs  auth.rs  errors.rs  file.rs  generate.rs  list.rs  main.rs  model.rs  restlist.rs  squid.rs  unifi.rs
src/: api.rs  config.rs  errors.rs  file.rs  generate.rs  list.rs  main.rs  model.rs  restlist.rs  squid.rs
