[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.28", features = ["serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
