[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.28", features = ["serde"] }
confique = { version = "0.2.4", features = ["toml"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
tempdir = "0.3.7"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "time"] }
tokio_schedule = "0.3.1"
